After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767001 - [WAYLAND] Screen recording crashes the shell
[WAYLAND] Screen recording crashes the shell
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
3.20.x
Other Linux
: Normal critical
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2016-05-30 00:04 UTC by Lionel Landwerlin
Modified: 2016-06-28 17:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell-recorder: Ensure we remove the redraw timeout on finalize (1.18 KB, patch)
2016-06-06 18:40 UTC, Rui Matos
committed Details | Review
shell-recorder: Avoid a crash when the cursor texture is NULL (1.12 KB, patch)
2016-06-06 18:41 UTC, Rui Matos
committed Details | Review

Description Lionel Landwerlin 2016-05-30 00:04:53 UTC
Triggering a screen record with Ctrl-Alt-Shift-r immediately crashes the shell.
Somewhere inside Cogl it seems :

[165599.594887] gnome-shell[17921]: segfault at 64 ip 00007f70a96bf800 sp 00007fffc11f39d8 error 4 in libcogl.so.20.4.1[7f70a9668000+b5000]
Comment 1 Rui Matos 2016-06-06 18:40:53 UTC
Created attachment 329225 [details] [review]
shell-recorder: Ensure we remove the redraw timeout on finalize

Otherwise we may end up using freed memory and crashing
Comment 2 Rui Matos 2016-06-06 18:41:50 UTC
Created attachment 329226 [details] [review]
shell-recorder: Avoid a crash when the cursor texture is NULL

When running as a wayland compositor, MetaCursorTracker might
legitimately not have a displayed cursor because e.g. a client unsets
the cursor surface.

Nore that, under an X session, the assumption that the tracker always
has a cursor texture is true because XFixesGetCursorImage() always
returns data even if the cursor isn't visible.

--

I think this is the crash reported here. The other patch fixes a crash
I hit while debugging this one.
Comment 3 Florian Müllner 2016-06-28 17:00:03 UTC
Review of attachment 329226 [details] [review]:

OK
Comment 4 Florian Müllner 2016-06-28 17:00:06 UTC
Review of attachment 329225 [details] [review]:

LGTM
Comment 5 Rui Matos 2016-06-28 17:04:45 UTC
Thanks, pushed to master and gnome-3-20

Attachment 329225 [details] pushed as c91085c - shell-recorder: Ensure we remove the redraw timeout on finalize
Attachment 329226 [details] pushed as 2a7f9f7 - shell-recorder: Avoid a crash when the cursor texture is NULL