shell-recorder: Ensure we remove the redraw timeout on finalize

Otherwise we may end up using freed memory and crashing

https://bugzilla.gnome.org/show_bug.cgi?id=767001